--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,18 @@
 set(Test testLevelGenerator)
 
-set(TestCase testRandomNumber testAnother)
+#set(Sources ${Test}.cpp)
+#add_executable(${Test} ${Sources})
+
+
+#target_link_libraries(${Test} PUBLIC gtest_main dungeon_object)
+#add_test(NAME ${Test} COMMAND ${Test})
+#set_tests_properties(${Test} PROPERTIES CTEST_OPTIONS "--output-on-failure")
+
+set(TestCase 
+testRandomNumber 
+testCalculateLevelSize 
+testCalculateDesiredRoomSize 
+testCalculateRecursionsAmount)
 
 
 set(Sources ${Test}.cpp)
@@ -9,7 +21,7 @@ add_executable(${Test} ${Sources})
 foreach(tc ${TestCase})
     target_link_libraries(${Test} PUBLIC gtest_main dungeon_object)
     add_test(NAME ${tc} COMMAND ${Test} --gtest_filter=levelGeneratorSuite.${tc})
-    set_tests_properties(${tc} PROPERTIES CTEST_OPTIONS "--output-on-failure")
+    set_tests_properties(${tc} PROPERTIES CTEST_OPTIONS "--output-on-failure" LABELS "LevelGeneration")
 endforeach()
 
 add_custom_target(run_tests DEPENDS ${Tests})
