100% test coverage for level gen

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,12 +8,24 @@ set(Test testLevelGenerator)
 #add_test(NAME ${Test} COMMAND ${Test})
 #set_tests_properties(${Test} PROPERTIES CTEST_OPTIONS "--output-on-failure")
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
+
 set(TestCase 
 testRandomNumber 
+testCalculateMinimumNodeSize
 testCalculateLevelSize 
 testCalculateDesiredNodeSize 
 testCalculateRecursionsAmount
-testSplitBSP)
+testSplitBSP_normal
+testSplitBSP_edge
+testSplitBSP_fail
+testCreateBSP
+testVisalization
+testCreateVisalizationRoom
+testCreateVisalizationNode
+testTraverseBSP
+testCreateRoom
+testCreateLevel)
 
 
 set(Sources ${Test}.cpp)
@@ -24,5 +36,7 @@ foreach(tc ${TestCase})
     add_test(NAME ${tc} COMMAND ${Test} --gtest_filter=levelGeneratorSuite.${tc})
     set_tests_properties(${tc} PROPERTIES CTEST_OPTIONS "--output-on-failure" LABELS "LevelGeneration")
 endforeach()
+
+
 
 add_custom_target(run_tests DEPENDS ${Tests})
