--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,4 @@
-set(Test testLevelGenerator)
-
-#set(Sources ${Test}.cpp)
-#add_executable(${Test} ${Sources})
-
-
-#target_link_libraries(${Test} PUBLIC gtest_main dungeon_object)
-#add_test(NAME ${Test} COMMAND ${Test})
-#set_tests_properties(${Test} PROPERTIES CTEST_OPTIONS "--output-on-failure")
+set(Test testLayoutGenerator)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
 
@@ -34,7 +26,7 @@ add_executable(${Test} ${Sources})
 
 foreach(tc ${TestCase})
     target_link_libraries(${Test} PUBLIC gtest_main dungeon_object)
-    add_test(NAME ${tc} COMMAND ${Test} --gtest_filter=levelGeneratorSuite.${tc})
+    add_test(NAME ${tc} COMMAND ${Test} --gtest_filter=layoutGeneratorSuite.${tc})
     set_tests_properties(${tc} PROPERTIES CTEST_OPTIONS "--output-on-failure" LABELS "LevelGeneration")
 endforeach()
 
